# starsector-fixer

./: .gitignore  Cargo.toml  LICENSE  readme.md
src/: main.rs
