[package]
name = "starsector-fixer"
version = "0.1.0"
edition = "2021"

authors = ["Anton Bulakh <self@necauqua.dev>"]
license = "MIT"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.58"
byteorder = "1.4.3"
cesu8 = "1.1.0"
env_logger = "0.9.0"
log = "0.4.17"
structopt = { version = "0.3.26", features = ["color"] }
zip = "0.6.2"
